--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -21,15 +21,16 @@ spec:
 
 
 ---
-apiVersion: v1
-kind: Service 
-metadata: 
+
+apiVersion: v1 # Kubernetes API version
+kind: Service # Kubernetes resource kind we are creating
+metadata: # Metadata of the resource kind we are creating
   name: springboot-k8ssvc
 spec:
-  type: NodePort
   selector:
     app: spring-boot-k8s
   ports:
-    - nodePort: 30163
-      port: 8080 
-      targetPort: 8080
+    - protocol: "TCP"
+      port: 8080 # The port that the service is running on in the cluster
+      targetPort: 8080 # The port exposed by the service
+  type: NodePort # type of the service.
