--- a/deploymentservice.yaml
+++ b/deploymentservice.yaml
@@ -29,8 +29,8 @@ metadata:
 spec:
   selector:
     app: spring-boot-k8s
-  type: LoadBalancer
   ports:
   - protocol: TCP
     port: 8080
     targetPort: 8080
+    type: Nodeport
